@@ -727,7 +727,10 @@ void frmMain::OnSaveDefinition(wxCommandEvent& event)
         return;
     }
 
-    wxFileDialog filename(this, _("Select output file"), wxT(""), wxT(""), _("SQL Scripts (*.sql)|*.sql|All files (*.*)|*.*"), wxSAVE | wxOVERWRITE_PROMPT);
+    wxString file;
+    settings->Read(wxT("frmMain/LastFile"), &file, wxEmptyString);
+
+    wxFileDialog filename(this, _("Select output file"), ::wxPathOnly(file), file, _("SQL Scripts (*.sql)|*.sql|All files (*.*)|*.*"), wxSAVE | wxOVERWRITE_PROMPT);
 
     // Show the dialogue
     if (filename.ShowModal() == wxID_OK)
@@ -740,6 +743,8 @@ void frmMain::OnSaveDefinition(wxCommandEvent& event)
     {
         wxLogInfo(wxT("User cancelled"));
     }
+
+    settings->Write(wxT("frmMain/LastFile"), filename.GetPath());
 }
 
 
