@@ -35,6 +35,7 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-12-28 DP  1.8.0  Remember last used save definition filename.
 2006-12-28 DP  1.8.0  Remember last used backup/restore filenames.
 2006-12-28 DP  1.8.0  Refactor code to remove support for building the Query
                       Tool with a listview rather than a grid.
